--- a/src/components/Pokecard.css
+++ b/src/components/Pokecard.css
@@ -2,6 +2,10 @@ li {
     list-style-type: none;
 }
 
+.card__list-item {
+    margin: .2rem 0;
+}
+
 .Pokecard {
     align-items: center;
     display: flex;
